# vtt-to-lrc

./: .flutter-plugins-dependencies  .gitignore  AGENTS.md  README.md  eval-review-v2.html  eval-review.html  main.py  pubspec.yaml  pyproject.toml  vtt-to-lrc.skill
.github/workflows/: flutter.yml  rust.yml
assets/backend/: vtt-to-lrc-macos-arm64  vtt-to-lrc-macos-arm64.stamp
lib/: app.dart  main.dart
lib/core/: file_scanner.dart  vtt_converter.dart
lib/services/: app_state.dart  conversion_service.dart  file_picker_service.dart  log_service.dart  rust_backend_service.dart  services.dart
lib/ui/: app_colors.dart  drop_overlay.dart  home_page.dart  log_view.dart
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
plans/: async-conversion-with-progress.md
rust-cli/: Cargo.toml
rust-cli/src/: converter.rs  main.rs  scanner.rs
scripts/: build-and-sync-rust-backend.sh
skill-package/vtt-to-lrc/: SKILL.md
skill-package/vtt-to-lrc/agents/: openai.yaml
skill-package/vtt-to-lrc/scripts/: convert.sh  vtt-to-lrc-linux-x64  vtt-to-lrc-macos-arm64
src/vtt_to_lrc/: __init__.py
test/: app_state_test.dart  conversion_service_test.dart  home_page_test.dart  log_service_test.dart  rust_backend_service_test.dart  vtt_converter_test.dart  vtt_file_converter_test.dart  widget_test.dart
